--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,38 @@
-.body{
-  background-color: aqua;
+body{
+  margin:0px;
+  font-family: Inter,sans-serif;
 }
+
+
+
+.nav{
+  background-color: #11222A;
+  color: #61dafb;
+  display: flex;
+  height: 90px;
+  align-items: center;
+  padding: 30px 25px;
+  
+}
+
+.nav > h4{
+  color: #Deebf8;
+  
+  margin:0;
+}
+
+.nav > h1{
+  margin: 0;
+  margin-right: auto;
+  font-size: 22px;
+  
+}
+
+nav > img{
+  height: 30 px;
+  margin-right:15px;
+}
+
+
+
+
