--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,13 @@
 body{
   margin:0px;
   font-family: Inter,sans-serif;
+  background-color: #282D35;
 }
 
 
 
 .nav{
-  background-color: #11222A;
+  background-color: #21222A;
   color: #61dafb;
   display: flex;
   height: 90px;
@@ -24,15 +25,46 @@ body{
 .nav > h1{
   margin: 0;
   margin-right: auto;
-  font-size: 22px;
+  font-size: 32px;
   
 }
 
 nav > img{
   height: 30 px;
-  margin-right:15px;
+  margin-right:30px;
+}
+
+.content{
+  /* margin:0;
+  color: #Deebf8;
+  display: inline;
+  align-items: center;
+  margin-left : 20px; */
+  padding: 57px 27px;
+  
+}
+
+.contentHeading{
+  color: aliceblue;
+  margin: 0;
+  font-size: 40px;
+  letter-spacing: -0.05em;
+  font-style: bold;
+}
+
+.contentlist{
+  color: #Deebf8;
+  margin-top: 46px;
+}
+
+.contentlist > li {
+  padding-block: 10px;
 }
 
 
+.contentlist > li::marker{
+  font-size: 1.4rem;
+  color: #61dafb;
 
+}
 
